--- a/order-history.html
+++ b/order-history.html
@@ -3,6 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!-- iOS: keep standalone web app mode across all pages -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
+<meta name="apple-mobile-web-app-title" content="EET Portal">
+
+<!-- App icon (must exist at this relative path) -->
+<link rel="apple-touch-icon" href="icon.png">
+
+<!-- Nice-to-have -->
+<meta name="theme-color" content="#2f77b6">
 <title>Elston Education and Training — Order History</title>
 
 <link rel="apple-touch-icon" href="icon.png">
